--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ежедневник</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <h1>Ежедневник</h1>
-    <input type="text" id="noteInput" placeholder="Введите заметку">
+    <p>By MK ©</p>
+    <input type="text" id="noteInput" placeholder="Введите задачу">
     <button onclick="addNote()">Добавить</button>
     <ul id="notesList"></ul>
-
     <script src="script.js"></script>
 </body>
 </html>
